web: fix color of form-group header in dark mode

--- a/web/src/authentik.css
+++ b/web/src/authentik.css
@@ -191,6 +191,10 @@ body {
     .pf-c-expandable-section__toggle-icon {
         color: var(--ak-dark-foreground);
     }
+    /* header for form group */
+    .pf-c-form__field-group-header-title-text {
+        color: var(--ak-dark-foreground);
+    }
     /* inputs */
     .pf-c-input-group {
         --pf-c-input-group--BackgroundColor: transparent;
